--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -42,6 +42,11 @@ p {
 h1, h2 {
   font-weight: normal; }
 
+a {
+  color: #545863; }
+  a:hover {
+    text-decoration: none; }
+
 #nav-icon {
   position: fixed;
   z-index: 1000;
@@ -554,133 +559,90 @@ rect.rect-white {
 rect.rect-yellow {
   stroke: #fff568; }
 
-#portfolio .portfolio-full-container {
-  background-image: url("../img/blue-bg.png");
-  background-color: #6dcff6;
-  height: 100%; }
-#portfolio .portfolio-title {
-  position: relative; }
-  #portfolio .portfolio-title .rects-05 {
-    margin: -8.5em 11.5em; }
-  #portfolio .portfolio-title #rects-05 {
-    width: 3.25em; }
-#portfolio:before {
-  content: "";
-  display: block;
-  width: 100%;
-  background-clip: padding-box;
-  border-style: solid;
-  border-image-slice: 100% 0 0 0;
-  border-image-width: 32px 0 0 0;
-  border-image-outset: 0;
-  border-image-repeat: repeat stretch;
-  border-width: 32px 0 0;
-  background-color: #6dcff6;
-  border-color: #6dcff6;
-  border-image-source: url("../img/blue-wave.svg"); }
-
-.portfolio-categories-container {
-  margin: 0 auto;
-  width: 100%; }
-
-.portfolio-categories {
-  min-width: 16.875em;
-  max-width: 18.125em;
-  margin-right: 3.5em; }
-  .portfolio-categories:last-child {
-    margin-right: 0; }
-  .portfolio-categories:nth-child(odd) a {
-    margin: 1.875em 0 1.875em 0; }
-  .portfolio-categories a {
-    width: 100%;
-    height: 100%;
-    float: left;
-    color: #333;
-    box-shadow: 3px 3px 0px 1px rgba(255, 245, 104, 0.6);
-    -webkit-transition: box-shadow 0.3s ease;
-    transition: box-shadow 0.3s ease; }
-    .portfolio-categories a:hover {
-      box-shadow: none; }
-      .portfolio-categories a:hover figure img {
-        opacity: 1; }
-      .portfolio-categories a:hover figure button {
-        opacity: 1;
-        -webkit-transform: translateY(-50%) translateX(-50%) scale(1);
-            -ms-transform: translateY(-50%) translateX(-50%) scale(1);
-                transform: translateY(-50%) translateX(-50%) scale(1); }
-      .portfolio-categories a:hover figcaption h2 {
-        -webkit-transform: translateY(0);
-            -ms-transform: translateY(0);
-                transform: translateY(0); }
-  .portfolio-categories figure {
+#portfolio {
+  height: auto; }
+  #portfolio .portfolio-full-container {
+    background-image: url("../img/blue-bg.png");
+    background-color: #6dcff6;
+    height: 100%; }
+  #portfolio .portfolio-title {
     position: relative;
-    overflow: hidden;
-    background: #333; }
-    .portfolio-categories figure img {
+    text-align: center;
+    width: 100%;
+    margin-top: 3.236em; }
+    #portfolio .portfolio-title .rects-05 {
+      margin: -8.5em 5.5em; }
+    #portfolio .portfolio-title #rects-05 {
+      width: 2.7em; }
+  #portfolio:before {
+    content: "";
+    display: block;
+    width: 100%;
+    background-clip: padding-box;
+    border-style: solid;
+    border-image-slice: 100% 0 0 0;
+    border-image-width: 32px 0 0 0;
+    border-image-outset: 0;
+    border-image-repeat: repeat stretch;
+    border-width: 32px 0 0;
+    background-color: #6dcff6;
+    border-color: #6dcff6;
+    border-image-source: url("../img/blue-wave.svg"); }
+  #portfolio .portfolio-cat-container {
+    width: 100%;
+    text-align: center;
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
+    display: flex;
+    /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 3.236em; }
+    #portfolio .portfolio-cat-container .portfolio-cat {
       position: relative;
-      display: block;
-      width: 100%;
-      height: 100%;
-      opacity: 0.8;
-      -webkit-transition: opacity 0.3s;
-      transition: opacity 0.3s; }
-    .portfolio-categories figure button {
-      position: absolute;
-      padding: 8px;
-      width: 100%;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      font-weight: bold;
-      -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
-      transition: opacity 0.3s, -webkit-transform 0.3s;
-      transition: opacity 0.3s, transform 0.3s;
-      transition: opacity 0.3s, transform 0.3s, -webkit-transform 0.3s;
-      top: 50%;
-      left: 50%;
-      border: 3px solid transparent;
-      background: rgba(255, 245, 104, 0.8);
-      color: #545863;
-      opacity: 0;
-      -webkit-transform: translateY(-50%) translateX(-50%) scale(0.25);
-      -ms-transform: translateY(-50%) translateX(-50%) scale(0.25);
-          transform: translateY(-50%) translateX(-50%) scale(0.25); }
-  .portfolio-categories figcaption {
-    position: absolute;
-    top: 0;
-    z-index: 11;
-    padding: 10px;
-    width: 100%;
-    height: 100%;
-    text-align: center; }
-    .portfolio-categories figcaption h2 {
-      margin: 0 0 20px 0;
-      color: #545863;
-      letter-spacing: 1px;
-      font-weight: 300;
-      font-size: 130%;
-      -webkit-transition: -webkit-transform 0.3s;
-      transition: -webkit-transform 0.3s;
-      transition: transform 0.3s;
-      transition: transform 0.3s, -webkit-transform 0.3s; }
-  .portfolio-categories svg {
-    position: absolute;
-    top: -1px;
-    /* fixes rendering issue in FF */
-    z-index: 10;
-    width: 100%;
-    height: 80%; }
-  .portfolio-categories svg path {
-    fill: rgba(255, 245, 104, 0.9);
-    mix-blend-mode: multply; }
-  .portfolio-categories figcaption, .portfolio-categories figcaption h2, .portfolio-categories button {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden; }
-  .portfolio-categories figcaption h2, .portfolio-categories figcaption p {
-    transform: translateY(50px);
-    -webkit-transform: translateY(50px);
-    -moz-transform: translateY(50px);
-    -o-transform: translateY(50px);
-    -ms-transform: translateY(50px); }
+      text-align: center;
+      font-size: 1.5em; }
+      #portfolio .portfolio-cat-container .portfolio-cat .portfolio-cat-hv {
+        padding: 1.618em;
+        transition: all 0.3s ease-out;
+        -webkit-transition: all 0.3s ease-out;
+        -moz-transition: all 0.3s ease-out;
+        -o-transition: all 0.3s ease-out;
+        -ms-transition: all 0.3s ease-out; }
+        #portfolio .portfolio-cat-container .portfolio-cat .portfolio-cat-hv:hover {
+          color: #fff;
+          transition: all 0.3s ease-out;
+          -webkit-transition: all 0.3s ease-out;
+          -moz-transition: all 0.3s ease-out;
+          -o-transition: all 0.3s ease-out;
+          -ms-transition: all 0.3s ease-out; }
+
+.arrow-up {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: .3em solid transparent;
+  border-right: .3em solid transparent;
+  border-bottom: 0.9em solid #545863;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 80 ")";
+  filter: alpha(opacity=80);
+  zoom: 1; }
 
 #photography ul.photo-thumbs {
   padding: 0;
