update mobile view

--- a/personal-website/css/media.css
+++ b/personal-website/css/media.css
@@ -68,6 +68,16 @@
   .intro-text {
     overflow: auto; }
 
+  .floating-rects-container {
+    display: none; }
+
+  .intro .rects-03 {
+    margin-left: 8.5em;
+    margin-top: -1em; }
+
+  .intro svg#rects-03 {
+    width: 2.75em; }
+
   .skills-title, .portfolio-title {
     margin-top: 2.617924em; }
 
@@ -130,6 +140,12 @@
 
   #portfolio .portfolio-title #rects-05 {
     width: 2.5em; }
+
+  .arrow-up {
+    display: none; }
+
+  #portfolio .portfolio-cat-container {
+    margin-bottom: 0; }
 
   #design .title {
     margin-top: 1.618em; }
