--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -47,7 +47,7 @@ h1, h2 {
 
 a {
   color: #545863; }
-  a:hover {
+  a:hover, a:active {
     text-decoration: none; }
 
 #nav-icon {
@@ -77,7 +77,7 @@ a {
     transition: transform 500ms cubic-bezier(0.6, 0.05, 0.28, 0.91), opacity 500ms, background-color 250ms, -webkit-transform 500ms cubic-bezier(0.6, 0.05, 0.28, 0.91); }
     #nav-icon div:first-child {
       margin-top: 7px; }
-  #nav-icon:hover div {
+  #nav-icon:hover div, #nav-icon:active div {
     background-color: #545863;
     transition: all 500ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
     -webkit-transition: all 500ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
@@ -172,13 +172,13 @@ a {
       -o-transition: all 0.3s ease-in-out;
       -ms-transition: all 0.3s ease-in-out;
       top: 75%; }
-    #nav-items .nav-item:hover {
+    #nav-items .nav-item:hover, #nav-items .nav-item:active {
       transition: all 0.3s ease-in-out;
       -webkit-transition: all 0.3s ease-in-out;
       -moz-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       -ms-transition: all 0.3s ease-in-out; }
-      #nav-items .nav-item:hover:after {
+      #nav-items .nav-item:hover:after, #nav-items .nav-item:active:after {
         width: 70%;
         left: 12%; }
 
@@ -624,7 +624,7 @@ rect.rect-yellow {
         -moz-transition: all 0.3s ease-out;
         -o-transition: all 0.3s ease-out;
         -ms-transition: all 0.3s ease-out; }
-        #portfolio .portfolio-cat-container .portfolio-cat .portfolio-cat-hv:hover {
+        #portfolio .portfolio-cat-container .portfolio-cat .portfolio-cat-hv:hover, #portfolio .portfolio-cat-container .portfolio-cat .portfolio-cat-hv:active {
           color: #fff;
           transition: all 0.3s ease-out;
           -webkit-transition: all 0.3s ease-out;
@@ -708,12 +708,12 @@ rect.rect-yellow {
           color: rgba(255, 255, 255, 0.9);
           text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
           border: 3px solid rgba(255, 255, 255, 0.5); }
-      #photography ul.photo-thumbs li a:hover img {
+      #photography ul.photo-thumbs li a:hover img, #photography ul.photo-thumbs li a:active img {
         opacity: 1;
         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 100 ")";
         filter: alpha(opacity=100);
         zoom: 1; }
-      #photography ul.photo-thumbs li a:hover div {
+      #photography ul.photo-thumbs li a:hover div, #photography ul.photo-thumbs li a:active div {
         left: 0; }
 
 .clearfix:after {
@@ -811,7 +811,7 @@ ul.round-thumbs {
           -moz-transition: all 0.3s ease;
           -o-transition: all 0.3s ease;
           -ms-transition: all 0.3s ease; }
-          ul.round-thumbs li .design-item .design-info button.md-trigger:hover {
+          ul.round-thumbs li .design-item .design-info button.md-trigger:hover, ul.round-thumbs li .design-item .design-info button.md-trigger:active {
             transform: scale(1.1);
             -webkit-transform: scale(1.1);
             -moz-transform: scale(1.1);
@@ -857,9 +857,9 @@ ul.round-thumbs {
       ul.round-thumbs li .design-item .design-img-6 {
         background: url(../img/thumb/design-06.jpg) center no-repeat;
         z-index: 12; }
-      ul.round-thumbs li .design-item:hover {
+      ul.round-thumbs li .design-item:hover, ul.round-thumbs li .design-item:active {
         box-shadow: 0 0 0 rgba(109, 207, 246, 0.6); }
-        ul.round-thumbs li .design-item:hover .design-thumb {
+        ul.round-thumbs li .design-item:hover .design-thumb, ul.round-thumbs li .design-item:active .design-thumb {
           box-shadow: inset 0 0 0 15px rgba(255, 255, 255, 0.5) 0 1px 3px rgba(0, 0, 0, 0.2);
           transform: rotate(-130deg);
           -webkit-transform: rotate(-130deg);
@@ -1017,14 +1017,14 @@ ul.round-thumbs {
         -moz-transition: all 0.3s ease-in;
         -o-transition: all 0.3s ease-in;
         -ms-transition: all 0.3s ease-in; }
-    #painting .painting-img-container .painting-img-row:hover .painting-img-overlay {
+    #painting .painting-img-container .painting-img-row:hover .painting-img-overlay, #painting .painting-img-container .painting-img-row:active .painting-img-overlay {
       transition: all 0.3s ease-in;
       -webkit-transition: all 0.3s ease-in;
       -moz-transition: all 0.3s ease-in;
       -o-transition: all 0.3s ease-in;
       -ms-transition: all 0.3s ease-in;
       background: none; }
-      #painting .painting-img-container .painting-img-row:hover .painting-img-overlay .painting-img-overlay-content {
+      #painting .painting-img-container .painting-img-row:hover .painting-img-overlay .painting-img-overlay-content, #painting .painting-img-container .painting-img-row:active .painting-img-overlay .painting-img-overlay-content {
         opacity: 1; }
 
 #design .title {
@@ -1044,7 +1044,7 @@ ul.round-thumbs {
     background-image: url("../img/lightpaperfibers.png"); }
   .float-left .categories-menu ul {
     text-align: right; }
-    .float-left .categories-menu ul a:hover {
+    .float-left .categories-menu ul a:hover, .float-left .categories-menu ul a:active {
       margin-right: .5em; }
 
 .float-right {
@@ -1056,7 +1056,7 @@ ul.round-thumbs {
   .float-right .categories-menu ul {
     text-align: left;
     padding-left: 0; }
-  .float-right .categories-menu a:hover {
+  .float-right .categories-menu a:hover, .float-right .categories-menu a:active {
     margin-left: .5em; }
 
 .title.videos-title {
@@ -1079,7 +1079,7 @@ ul.round-thumbs {
       -moz-transition: 0.3s all ease-in;
       -o-transition: 0.3s all ease-in;
       -ms-transition: 0.3s all ease-in; }
-      .categories-menu ul li a:hover {
+      .categories-menu ul li a:hover, .categories-menu ul li a:active {
         transition: 0.3s all ease-in;
         -webkit-transition: 0.3s all ease-in;
         -moz-transition: 0.3s all ease-in;
@@ -1115,7 +1115,7 @@ ul.round-thumbs {
           -moz-transition: all 0.2s ease-in;
           -o-transition: all 0.2s ease-in;
           -ms-transition: all 0.2s ease-in; }
-        #contact .social-media ul li a:hover i {
+        #contact .social-media ul li a:hover i, #contact .social-media ul li a:active i {
           margin-top: -.2em;
           transition: all 0.2s ease-in;
           -webkit-transition: all 0.2s ease-in;
