--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -110,7 +110,7 @@ a {
   overflow: auto;
   top: 0px;
   left: -20%;
-  opacity: 0;
+  visibility: hidden;
   padding: 25px 0px;
   height: 100%;
   transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
@@ -120,7 +120,12 @@ a {
   -ms-transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91); }
   #nav-box.active {
     left: 0;
-    opacity: 1; }
+    visibility: visible;
+    transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
+    -webkit-transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
+    -moz-transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
+    -o-transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91);
+    -ms-transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91); }
 
 #nav-bg {
   position: fixed;
