--- a/personal-website/css/main.scss
+++ b/personal-website/css/main.scss
@@ -112,14 +112,14 @@ $easing: cubic-bezier(.6, .05, .28, .91);
     overflow: auto;
     top: 0px;
     left: -20%;
-    //width: 20%;
-    opacity: 0;
+    visibility: hidden;
     padding: 25px 0px;
     height: 100%;
     @include transition(all 350ms $easing);
     &.active{
     	left: 0;
-    	opacity: 1;
+    	visibility: visible;
+    	@include transition(all 350ms $easing);
     }
 }  
 
