--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -134,7 +134,7 @@ a {
   overflow: hidden;
   top: 0px;
   left: -20%;
-  opacity: 0;
+  visibility: none;
   width: 0;
   height: 0;
   border-style: solid;
@@ -146,7 +146,7 @@ a {
   -ms-transition: all 350ms cubic-bezier(0.6, 0.05, 0.28, 0.91); }
   #nav-bg.active {
     left: 0;
-    opacity: 1; }
+    visibility: visible; }
 
 #nav-items {
   position: relative;
