--- a/personal-website/css/main.scss
+++ b/personal-website/css/main.scss
@@ -127,7 +127,8 @@ $easing: cubic-bezier(.6, .05, .28, .91);
     overflow: hidden;
     top: 0px;
     left: -20%;
-    opacity: 0;
+    //opacity: 0;
+    visibility: none;
     width: 0;
 	height: 0;
 	border-style: solid;
@@ -135,7 +136,8 @@ $easing: cubic-bezier(.6, .05, .28, .91);
     @include transition(all 350ms $easing);
     &.active{
     	left:0;
-    	opacity: 1;
+    	//opacity: 1;
+    	visibility: visible;
     }
 }
 
