--- a/personal-website/css/remodal-default-theme.scss
+++ b/personal-website/css/remodal-default-theme.scss
@@ -76,6 +76,13 @@
   width: 70%;
 }
 
+.remodal p{
+  width: 70%;
+  display: block;
+  margin: 1.618em auto;
+  font-size: 1.2em;
+  text-align: justify;
+}
 
 
 .remodal.remodal-is-opening,
