--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -209,12 +209,11 @@ a {
   height: 21.875em; }
 
 .blue-circle {
-  fill: rgba(109, 207, 246, 0.8); }
-
-.mix-blend-mode {
+  fill: rgba(109, 207, 246, 0.8);
   mix-blend-mode: multiply; }
 
 .no-mix-blend-mode {
+  fill: rgba(15, 175, 238, 0.4);
   mix-blend-mode: none; }
 
 .rects {
@@ -895,8 +894,10 @@ ul.round-thumbs {
 
 .video-container iframe {
   max-width: 100%; }
-.video-container .video-info {
-  margin-top: 1rem; }
+
+.video-info {
+  margin-top: 1em;
+  text-align: center; }
 
 #painting .painting-img-container {
   text-align: center; }
@@ -1053,38 +1054,192 @@ ul.round-thumbs {
   background: #6dcff6;
   color: #fff; }
 
-.animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both; }
-
-@-webkit-keyframes shake {
-  0%, 100% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0); }
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0); }
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0); } }
-@keyframes shake {
-  0%, 100% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0); }
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0); }
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0); } }
-.shake {
-  -webkit-animation-name: shake;
-  animation-name: shake; }
-
 footer {
   text-align: center; }
 
 .owl-theme .owl-controls .owl-page span {
   background: rgba(109, 207, 246, 0.8); }
+
+#hfbform_id_1 {
+  border-width: 0;
+  border-style: none;
+  background: none;
+  margin-top: -1em;
+  margin-left: -5px; }
+  #hfbform_id_1 .hfb_pd_formbody {
+    padding: 0; }
+  #hfbform_id_1 #form_submit {
+    background-color: rgba(109, 207, 246, 0.8);
+    margin-top: -10px; }
+  #hfbform_id_1 .hfb_pd_input {
+    padding: 10px; }
+
+#loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000; }
+
+.loader {
+  font-size: 4em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  height: .5em;
+  width: 1em;
+  z-index: 1001; }
+
+.loader:before,
+.loader:after {
+  content: "";
+  display: block;
+  border: 3px solid #fff568;
+  background: #3d3e3f;
+  position: absolute;
+  height: .6em;
+  width: .6em; }
+
+.loader:before {
+  border-color: #6dcff6;
+  animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+  -webkit-animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+  animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite; }
+
+.loader:after {
+  -webkit-animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+  animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite; }
+
+@-webkit-keyframes load-before {
+  0% {
+    left: 0;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); }
+  50% {
+    left: 150%;
+    transform: scale(1.5, 1);
+    -webkit-transform: scale(1.5, 1);
+    -moz-transform: scale(1.5, 1);
+    -o-transform: scale(1.5, 1);
+    -ms-transform: scale(1.5, 1); }
+  100% {
+    left: 0;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); } }
+@-webkit-keyframes load-after {
+  0% {
+    left: 150%;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); }
+  50% {
+    left: 0;
+    transform: scale(1.5, 1);
+    -webkit-transform: scale(1.5, 1);
+    -moz-transform: scale(1.5, 1);
+    -o-transform: scale(1.5, 1);
+    -ms-transform: scale(1.5, 1); }
+  100% {
+    left: 150%;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); } }
+@-webkit-keyframes zoom-before {
+  0% {
+    z-index: 0; }
+  50% {
+    z-index: 1; }
+  100% {
+    z-index: 0; } }
+@-webkit-keyframes zoom-after {
+  0% {
+    z-index: 1; }
+  50% {
+    z-index: 0; }
+  100% {
+    z-index: 1; } }
+#loader-wrapper .loader-section {
+  position: fixed;
+  top: 0;
+  width: 51%;
+  height: 100%;
+  background: url("../img/grey-bg.png") repeat;
+  z-index: 1000;
+  transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -o-transform: translateX(0);
+  -ms-transform: translateX(0); }
+
+#loader-wrapper .loader-section.section-left {
+  left: 0; }
+
+#loader-wrapper .loader-section.section-right {
+  right: 0; }
+
+/* Loaded */
+.loaded #loader-wrapper .loader-section.section-left {
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+  -moz-transform: translateX(-100%);
+  -o-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -webkit-transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -moz-transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -ms-transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1); }
+
+.loaded #loader-wrapper .loader-section.section-right {
+  transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  -moz-transform: translateX(100%);
+  -o-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -webkit-transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -moz-transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -ms-transition: all 0.7s 0.4s cubic-bezier(0.645, 0.045, 0.355, 1); }
+
+.loaded .loader:after, .loaded .loader:before {
+  left: 0;
+  opacity: 0;
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out; }
+
+.loaded #loader-wrapper {
+  visibility: hidden;
+  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  -o-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  transition: all 0.7s 1s ease-out;
+  -webkit-transition: all 0.7s 1s ease-out;
+  -moz-transition: all 0.7s 1s ease-out;
+  -o-transition: all 0.7s 1s ease-out;
+  -ms-transition: all 0.7s 1s ease-out; }
+
+/* JavaScript Turned Off */
+.no-js #loader-wrapper {
+  display: none; }
