--- a/personal-website/css/main.scss
+++ b/personal-website/css/main.scss
@@ -200,13 +200,11 @@ $easing: cubic-bezier(.6, .05, .28, .91);
 
 .blue-circle{
 	fill: rgba($blue, .8);
-}
-
-.mix-blend-mode{
 	mix-blend-mode: multiply; 
 }
 
 .no-mix-blend-mode{
+	fill: rgba(darken($blue, 20), .4);
 	mix-blend-mode: none;	
 }
 
@@ -867,10 +865,11 @@ rect.rect-yellow{
 .video-container{
 	iframe {
         max-width: 100%;
-    }
-    .video-info{
-    	margin-top: 1rem;
-    }
+    }  
+}
+.video-info{
+    	margin-top: 1em;
+    	text-align: center;
 }
 
 //painting page
@@ -1081,52 +1080,6 @@ rect.rect-yellow{
 		color: #fff;
 	}
 }
-//contact form
-.animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-@-webkit-keyframes shake {
-  0%, 100% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0);
-  }
-
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0);
-  }
-}
-
-@keyframes shake {
-  0%, 100% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0);
-  }
-
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0);
-  }
-}
-
-.shake {
-  -webkit-animation-name: shake;
-  animation-name: shake;
-}
 
 //footer
 footer{
@@ -1138,4 +1091,167 @@ footer{
 	background: rgba($blue, .8);
 }
 
+//contact form
+#hfbform_id_1{
+	border-width: 0;
+	border-style: none;
+	background: none;
+	margin-top: -1em;
+	margin-left: -5px;
+    .hfb_pd_formbody{
+    	padding: 0;
+    }
+    #form_submit{
+    	background-color: rgba($blue, .8);
+    	margin-top: -10px;
+    }
+    .hfb_pd_input{
+    	padding: 10px;
+    }
+}
+
+//loader
+#loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+
+.loader {
+    font-size: 4em;
+   	@include centerEl;
+    height: .5em;
+    width: 1em;
+    
+    z-index: 1001;
+}
+
+.loader:before,
+.loader:after {
+    content: "";
+    display: block;
+    border: 3px solid $yellow;
+    background: #3d3e3f;
+    position: absolute;
+    height: .6em;
+    width: .6em;    
+}
+
+
+.loader:before {
+	border-color: $blue;
+    animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+    -webkit-animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+       -moz-animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+         -o-animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+            animation: load-before 2s ease-in-out infinite, zoom-before .66s ease-in-out infinite;
+  
+}
+
+.loader:after {
+    -webkit-animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+       -moz-animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+         -o-animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+            animation: load-after 2s ease-in-out infinite, zoom-after .66s ease-in-out infinite;
+   
+}
+
+@-webkit-keyframes load-before {
+    0% {
+        left: 0;
+        @include transform(scale(1.1));
+    }
+
+    50% {
+        left: 150%;
+        @include transform(scale(1.5, 1));  
+    }
+
+    100% {
+        left: 0;
+        @include transform(scale(1.1));
+    }
+}
+
+
+@-webkit-keyframes load-after {
+    0% {
+        left: 150%;
+        @include transform(scale(1.1));
+    }
+
+    50% {
+        left: 0;
+       @include transform(scale(1.5, 1));  
+    }
+
+    100% {
+        left: 150%;
+        @include transform(scale(1.1));
+    }
+
+}
+
+
+@-webkit-keyframes zoom-before {
+    0% { z-index: 0; }
+    50% { z-index: 1; }
+    100% { z-index: 0; }
+}
+
+@-webkit-keyframes zoom-after {
+    0% { z-index: 1; }
+    50% { z-index: 0; }
+    100% { z-index: 1; }
+}
+
+
+#loader-wrapper .loader-section {
+    position: fixed;
+    top: 0;
+    width: 51%;
+    height: 100%;
+    background: url('../img/grey-bg.png') repeat;
+    z-index: 1000;
+	@include transform(translateX(0));
+}
+
+#loader-wrapper .loader-section.section-left {
+    left: 0;
+}
+
+#loader-wrapper .loader-section.section-right {
+    right: 0;
+}
+
+/* Loaded */
+.loaded #loader-wrapper .loader-section.section-left {
+    @include transform(translateX(-100%));	
+	@include transition(all .7s .4s cubic-bezier(0.645, 0.045, 0.355, 1.000));
+}
+
+.loaded #loader-wrapper .loader-section.section-right {
+	@include transform(translateX(100%));	
+	@include transition(all .7s .4s cubic-bezier(0.645, 0.045, 0.355, 1.000));
+    }
+    
+    .loaded .loader:after, .loaded .loader:before{
+        left: 0;
+        opacity: 0;
+        @include transition(all .3s ease-out);     
+    }
+
+    .loaded #loader-wrapper {
+        visibility: hidden;
+		@include transform(translateY(-100%));	
+		@include transition(all .7s 1s ease-out);     
+    }
+    
+    /* JavaScript Turned Off */
+    .no-js #loader-wrapper {
+        display: none;
+    }
 
